[package]
name = "yn_util"
version = "0.1.0"
authors = ["wujiajun <15820330954@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "1.1.0"
mongodb = "1.1.1"
lazy_static = "1.4"
redis = { version = "0.17.0", features = ["cluster"] }

actix-web-httpauth = "0.3"
actix-cors = "0.2"
actix-service = "1.0"

actix-web = "3.2.0"
jsonwebtoken = "7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"

log = "0.4.11"
env_logger = "0.8.2"
chrono = "0.4.19"
thiserror = "1.0"
anyhow = "1.0"
md5 = "0.7"

async-trait = "0.1.42"
futures = { version = "0.3.8", default-features = false, features = ["async-await"] }

# mysql = "17.0"
# json = "*"
# rand = "0.7"
# curl = "0.4"
# regex = "1.3"
# redis = "0.13"
# tera = { version = "1.0" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
